@@ -67,6 +67,7 @@ All:
 
 Unix:
 
+- Fix bug in wxExecute() if child exited too quickly (Kevin B. McCarty).
 - Add --disable-sys-libs configure option.
 
 All (GUI):
